fix whitespace at html

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -2,7 +2,7 @@
   section {
     background-color: #0a1838;
     &.about {
-      padding: 100px 30px;
+      padding: 100px 20px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-evenly;
