--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,6 +41,7 @@ html {
 body {
   background-color: #0f172a;
   font-family: "Raleway", sans-serif;
+  overflow-x:hidden;
 }
 
 // COLOR VARIABLE
